K1J-1525: Migrate All Tests to JUnit 5 - Batch 6